# final-project-helaforge

./: .gitignore  RUNBOT.md  SEMANTIC_NAVIGATOR_UPDATES.md  yolo_semantic_map.json
config/: default.rviz
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/: basicmove.py
src/diff_drive_robot/: README.md  package.xml  setup.cfg  setup.py
src/diff_drive_robot/config/: .gitkeep  gz_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_rviz.rviz
src/diff_drive_robot/diff_drive_robot/: __init__.py  arrow_teleop.py  kinect_bridge.py  kobuki_driver.py  odom_to_tf.py  semantic_navigator.py  sort.py  voice_commander.py  yolo_tracker.py
src/diff_drive_robot/launch/: navigation.launch.py  slam.launch.py  spawn_robot.launch.py
src/diff_drive_robot/urdf/: robot.urdf.xacro
src/diff_drive_robot/worlds/: empty.sdf  room.sdf  yolo_world.sdf
